--- a/index.html
+++ b/index.html
@@ -33,8 +33,11 @@
         <input type="text" id="RoomNo" name="RoomNo" required>
         <br>
         <label for="grievance">Grievance:</label>
-        <textarea id="grievance" name="grievance" required></textarea>
-        <br>
+        <input type="text" id="grievance" name="grievance" required>
+        <br> 
+        <!-- <label for="grievance">Grievance:</label>
+        <input type="text" id="grievance" name="grievance" required>
+        <br> -->
         <label for="feedback">Feedback:</label>
         <select id="feedback" name="feedback" required>
             <option value="">--Select Feedback--</option>
