--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
         </select>
         <br>
         <label for="dateGrievance">Date of Grievance:</label>
-        <input type="date" id="dateGrievance" name="dateGrievance" required>
+        <input type="date" id="dateGrievance" name="dateGrievance" required maxlength="38">
         <br>
         <label for="dateResolution">Date of Grievance Resolution:</label>
         <input type="date" id="dateResolution" name="dateResolution" required>
