--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
         <input type="text" id="RoomNo" name="RoomNo" required>
         <br>
         <label for="grievance">Grievance:</label>
-        <input type="text" id="grievance" name="grievance" required>
+        <input type="text" id="grievance" name="grievance" required maxlength="38">
         <br> 
         <!-- <label for="grievance">Grievance:</label>
         <input type="text" id="grievance" name="grievance" required>
