--- a/index.html
+++ b/index.html
@@ -18,7 +18,15 @@
         <input type="date" id="date" name="date" required>
         <br>
         <label for="studentName">Staff Name:</label>
-        <input type="text" id="studentName" name="studentName" required>
+        <div style="display: flex; align-items: center; gap: 10px;">
+            <select id="namePrefix" name="namePrefix" required>
+                <option value="Mr.">Mr.</option>
+                <option value="Ms.">Ms.</option>
+                <option value="Mrs.">Mrs.</option>
+                <option value="Dr.">Dr.</option>
+            </select>
+            <input type="text" id="studentName" name="studentName" required placeholder="Enter Name">
+        </div>
         <br>
         <label for="regNumber">Employee ID:</label>
         <input type="text" id="regNumber" name="regNumber" required>
