--- a/index.html
+++ b/index.html
@@ -14,7 +14,12 @@
         <label for="atrNo">ATR No:</label>
         <input type="text" id="atrNo" name="atrNo" required>
         <br>
-        
+        <label></label>
+        <input type="radio" id="staffOption" name="userType" value="Staff" checked>
+        <label for="staffOption">Staff</label>
+        <input type="radio" id="studentOption" name="userType" value="Student">
+        <label for="studentOption">Student</label>
+        <br>
         <label for="capturePhotoInput">Capture Photo:</label>
         <input type="file" id="capturePhotoInput" accept="image/*" capture="environment">
         <button id="customFileButton">Choose File</button>
