--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
         <label for="date">Date:</label>
         <input type="date" id="date" name="date" required>
         <br>
-        <label for="studentName">Staff/Student Name:</label>
+        <label for="studentName">Staff or Student Name:</label>
         <div style="display: flex; align-items: center; gap: 10px;">
             <select id="namePrefix" name="namePrefix" required>
                 <option value="Mr.">Mr.</option>
@@ -41,7 +41,7 @@
             <input type="text" id="studentName" name="studentName" required placeholder="Enter Name">
         </div>
         <br>
-        <label for="regNumber">Employee/RegNo ID:</label>
+        <label for="regNumber">Employee No / Registration No:</label>
         <input type="text" id="regNumber" name="regNumber" required>
         <br>
         <label for="Department">Department Name:</label>
@@ -77,7 +77,7 @@
         <input type="text" id="GrievanceResolvedby" name="GrievanceResolvedby" required>
         <br>
         <!-- Signature Buttons -->
-        <button type="button" id="studentSignatureBtn">Staff/Student Signature</button>
+        <button type="button" id="studentSignatureBtn">Staff / Student Signature</button>
         <input type="hidden" id="studentSignature">
         <br>
         <button type="button" id="additionalSignatureBtn">Technician Signature</button>
