--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/pdf-lib/1.17.1/pdf-lib.min.js"></script>
 </head>
 <body>
-    <h2>Staff Action Taken Report</h2>
+    <h2>Action Taken Report</h2>
     <form id="grievanceForm">
         <!-- Existing Form Fields -->
         <label for="atrNo">ATR No:</label>
